--- a/src/input.css
+++ b/src/input.css
@@ -41,21 +41,43 @@ p {
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   max-width: 80rem;
 }
 
 figure {
-  height: 60%;
+  min-height: 28rem;
 }
 
-@media (min-width: 1024px) {
+figure {
+  min-height: 28rem;
+}
+
+@media (min-width: 1200px) {
   figure {
-    height: 30rem;
+    min-height: 32rem;
   }
 }
 
 /* CAROUSEL CSS */
+
+@import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .container {
   display: flex;
@@ -64,6 +86,22 @@ figure {
   padding: 30px 10px;
   font-family: "DM Sans", sans-serif;
   transition: background 0.4s ease-in;
+  margin: 0 auto;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+.card {
+  position: absolute;
+  width: 60%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transition: transform 0.4s ease;
+  cursor: pointer;
 }
 
 .container {
@@ -76,24 +114,18 @@ figure {
   align-items: center;
 }
 
-input[type="radio"] {
-  display: none;
+.cards {
+  position: relative;
+  width: 100%;
+  height: 325px;
+  margin-bottom: 20px;
+  margin: 0 auto;
 }
 
-.card {
-  position: absolute;
+.container img {
   width: 100%;
   height: 100%;
-  left: 0;
-  right: 0;
-  margin: auto;
-  transition: transform 0.4s ease;
-  cursor: pointer;
-}
-
-img {
-  width: 100%;
-  height: 100%;
+  border-radius: 10px;
   object-fit: cover;
 }
 
@@ -126,90 +158,58 @@ img {
 }
 
 .featured-description {
-  background-color: #fff;
   border-radius: 8px;
-  min-width: 320px;
+  width: 100%;
   padding: 16px 10px;
+  text-align: center;
 }
 
 .upper-part {
   position: relative;
   display: flex;
   align-items: center;
-  margin-bottom: 12px;
-  height: 36px;
+  height: 68px;
   overflow: hidden;
 }
 
-.play-icon {
-  margin-right: 10px;
-}
-
 .article-info {
-  width: calc(100% - 32px);
+  width: 100%;
   display: block;
 }
 
 .article-info .title {
   color: #403d40;
-  font-size: 14px;
-  line-height: 24px;
+  line-height: 32px;
+  padding-bottom: 8px;
 }
 
-.sub-line {
+/* .sub-line {
   display: flex;
   justify-content: space-between;
   width: 100%;
-}
+} */
 
-.subtitle,
-.time {
-  font-size: 12px;
-  line-height: 16px;
-  color: #c6c5c6;
-}
-
-.time {
-  font-size: 12px;
-  line-height: 16px;
-  color: #a5a5a5;
-  font-weight: 500;
-  margin-left: auto;
-}
-
-.progress-bar {
-  height: 3px;
-  width: 100%;
-  background-color: #e9efff;
-  border-radius: 2px;
-  overflow: hidden;
-}
-
-.progress {
-  display: block;
-  position: relative;
-  width: 60%;
-  height: 100%;
-  background-color: #2992dc;
-  border-radius: 6px;
+.subtitle {
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
 }
 
 .info-area {
   width: 100%;
   position: absolute;
   top: 0;
-  left: 30px;
-  transition: transform 0.4s ease-in;
+  transition: transform 0.5s ease-in;
 }
 
-#item-2:checked ~ .player #test {
+#item-2:checked ~ .featured-description #test {
   transform: translateY(0);
 }
 
-#item-2:checked ~ .player #test {
-  transform: translateY(-40px);
+#item-2:checked ~ .featured-description #test {
+  transform: translateY(-68px);
 }
 
-#item-3:checked ~ .player #test {
-  transform: translateY(-80px);
+#item-3:checked ~ .featured-description #test {
+  transform: translateY(-136px);
 }
