--- a/src/output.css
+++ b/src/output.css
@@ -623,10 +623,6 @@ video {
   margin-bottom: 3rem;
 }
 
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -658,6 +654,10 @@ video {
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .flex-col {
@@ -756,8 +756,18 @@ video {
   line-height: 2rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-5xl {
   font-size: 3rem;
+  line-height: 1;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
   line-height: 1;
 }
 
@@ -769,21 +779,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
 }
 
 .font-black {
@@ -814,6 +809,14 @@ video {
 
 .underline-offset-8 {
   text-underline-offset: 8px;
+}
+
+.duration-75 {
+  transition-duration: 75ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @font-face {
@@ -936,14 +939,14 @@ input[type="radio"] {
 .container img {
   width: 100%;
   height: 100%;
-  border-radius: 10px;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-#item-1:checked ~ .cards #article-3,
+#item-1:checked ~ .cards #article-4,
 #item-2:checked ~ .cards #article-1,
-#item-3:checked ~ .cards #article-2 {
+#item-3:checked ~ .cards #article-2,
+#item-4:checked ~ .cards #article-3 {
   transform: translatex(-40%) scale(0.8);
   opacity: 0.4;
   z-index: 0;
@@ -951,7 +954,8 @@ input[type="radio"] {
 
 #item-1:checked ~ .cards #article-2,
 #item-2:checked ~ .cards #article-3,
-#item-3:checked ~ .cards #article-1 {
+#item-3:checked ~ .cards #article-4,
+#item-4:checked ~ .cards #article-1 {
   transform: translatex(40%) scale(0.8);
   opacity: 0.4;
   z-index: 0;
@@ -959,13 +963,24 @@ input[type="radio"] {
 
 #item-1:checked ~ .cards #article-1,
 #item-2:checked ~ .cards #article-2,
-#item-3:checked ~ .cards #article-3 {
+#item-3:checked ~ .cards #article-3,
+#item-4:checked ~ .cards #article-4 {
   transform: translatex(0) scale(1);
   opacity: 1;
   z-index: 1;
   img {
     box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
   }
+}
+
+/*send a card to the back to hide */
+
+#item-1:checked ~ .cards #article-3,
+#item-2:checked ~ .cards #article-4,
+#item-3:checked ~ .cards #article-1,
+#item-4:checked ~ .cards #article-2 {
+  transform: translatex(0) scale(1);
+  opacity: 0;
 }
 
 .featured-description {
@@ -991,7 +1006,7 @@ input[type="radio"] {
 .article-info .title {
   color: #403d40;
   line-height: 32px;
-  padding-bottom: 8px;
+  padding-bottom: 4px;
 }
 
 /* .sub-line {
@@ -1001,7 +1016,7 @@ input[type="radio"] {
 } */
 
 .subtitle {
-  font-size: 24px;
+  font-size: 1rem;
   line-height: 28px;
   text-align: center;
 }
@@ -1010,6 +1025,9 @@ input[type="radio"] {
   width: 100%;
   position: absolute;
   top: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
   transition: transform 0.5s ease-in;
 }
 
@@ -1020,6 +1038,28 @@ input[type="radio"] {
 
 #item-3:checked ~ .featured-description #test {
   transform: translateY(-136px);
+}
+
+#item-4:checked ~ .featured-description #test {
+  transform: translateY(-204px);
+}
+
+.hover\:scale-50:hover {
+  --tw-scale-x: .5;
+  --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-100:hover {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:text-red-500:hover {
@@ -1063,6 +1103,11 @@ input[type="radio"] {
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
