--- a/input.css
+++ b/input.css
@@ -125,13 +125,13 @@ input[type="radio"] {
 .container img {
   width: 100%;
   height: 100%;
-  border-radius: 10px;
   object-fit: cover;
 }
 
-#item-1:checked ~ .cards #article-3,
+#item-1:checked ~ .cards #article-4,
 #item-2:checked ~ .cards #article-1,
-#item-3:checked ~ .cards #article-2 {
+#item-3:checked ~ .cards #article-2,
+#item-4:checked ~ .cards #article-3 {
   transform: translatex(-40%) scale(0.8);
   opacity: 0.4;
   z-index: 0;
@@ -139,7 +139,8 @@ input[type="radio"] {
 
 #item-1:checked ~ .cards #article-2,
 #item-2:checked ~ .cards #article-3,
-#item-3:checked ~ .cards #article-1 {
+#item-3:checked ~ .cards #article-4,
+#item-4:checked ~ .cards #article-1 {
   transform: translatex(40%) scale(0.8);
   opacity: 0.4;
   z-index: 0;
@@ -147,7 +148,8 @@ input[type="radio"] {
 
 #item-1:checked ~ .cards #article-1,
 #item-2:checked ~ .cards #article-2,
-#item-3:checked ~ .cards #article-3 {
+#item-3:checked ~ .cards #article-3,
+#item-4:checked ~ .cards #article-4 {
   transform: translatex(0) scale(1);
   opacity: 1;
   z-index: 1;
@@ -155,6 +157,16 @@ input[type="radio"] {
   img {
     box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
   }
+}
+
+/*send a card to the back to hide */
+
+#item-1:checked ~ .cards #article-3,
+#item-2:checked ~ .cards #article-4,
+#item-3:checked ~ .cards #article-1,
+#item-4:checked ~ .cards #article-2 {
+  transform: translatex(0) scale(1);
+  opacity: 0;
 }
 
 .featured-description {
@@ -180,7 +192,7 @@ input[type="radio"] {
 .article-info .title {
   color: #403d40;
   line-height: 32px;
-  padding-bottom: 8px;
+  padding-bottom: 4px;
 }
 
 /* .sub-line {
@@ -190,7 +202,7 @@ input[type="radio"] {
 } */
 
 .subtitle {
-  font-size: 24px;
+  font-size: 1rem;
   line-height: 28px;
   text-align: center;
 }
@@ -199,6 +211,9 @@ input[type="radio"] {
   width: 100%;
   position: absolute;
   top: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
   transition: transform 0.5s ease-in;
 }
 
@@ -212,4 +227,8 @@ input[type="radio"] {
 
 #item-3:checked ~ .featured-description #test {
   transform: translateY(-136px);
+}
+
+#item-4:checked ~ .featured-description #test {
+  transform: translateY(-204px);
 }
